<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activities.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <com.travelee.lullabies.CropImageView
            android:id="@+id/iv_image"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/roundImageView"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_author"
            style="@style/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            tools:text="@string/author" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_releaseDate"
                style="@style/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginStart="7dp"
                tools:text="@string/releaseDate" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_rating"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/rate"
                    android:src="@drawable/baseline_star_24" />

                <TextView
                    android:id="@+id/tv_rating"
                    style="@style/heading2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:text="@string/rating" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_genre"
                style="@style/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:layout_marginStart="7dp" />

            <TextView
                android:id="@+id/tv_genres"
                style="@style/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/genres" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_watch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/rate"
                android:layout_marginStart="7dp"
                android:src="@drawable/baseline_watch_later_24" />

            <TextView
                android:id="@+id/tv_minutes"
                style="@style/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="7dp"
                tools:text="@string/readingtime" />
        </LinearLayout>



        <TextView
            android:id="@+id/tv_desc"
            style="@style/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/contenttitle" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/body3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:justificationMode="inter_word"
            android:textStyle="normal"
            tools:text="@string/content" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/share"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</ScrollView>
